tests/baselines/reference/implicitAnyNewExprLackConstructorSignature.errors.txt
implicitAnyNewExprLackConstructorSignature.ts(2,14): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== implicitAnyNewExprLackConstructorSignature.ts (1 errors) ====
    function Point() { this.x = 3; }
    var x: any = new Point();  // error at "new"
                 ~~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.